# Mimikyu

./: .gitignore  CMakeLists.txt  README.md  TODO.md
src/: mimikyu.c  mimikyu.h
src/mimikyu/: string.h
